--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
 			<version>3.3.7</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-codegen-plugin</artifactId>
 			<version>3.3.7</version>
