--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_calculo
+spring.datasource.url=jdbc:mysql://localhost:3306/db_calculo?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
